simplify layout. having some issues with whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 #editor{
   padding: 0 4px; 
   float: left;
-  width: 750px;
+  width: 700px;
 }
 
 #box { 
@@ -27,7 +27,8 @@ body {
 
 #controls { 
   float: right;
-  width: 200px; 
+  width: 500px; 
+  float:right;
   padding: 0 1em; 
   overflow: auto;
 }
